--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/2adee95686.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/app.js" defer></script>
+    <script src="app.js" defer></script>
     <title>Portfolio</title>
 </head>
 <body>
@@ -32,7 +32,7 @@
         <div class="about" id="tab-about-me">
             <h1 class="split left">About me</h1>
             <div class="split right"> 
-                <img src="public/IMG_0010.jpeg" width="200" height="auto">
+                <img src="IMG_0010.jpeg" width="200" height="auto">
                 <p>
                     My name is Audrey Bledsoe and I am 24 years old.<br>
                     I graduated from General assembly with a focus on Full-stack engineering.<br>
